--- a/style.css
+++ b/style.css
@@ -114,6 +114,32 @@ h2{
 }
 /* Fin de las redes sociales */
 
+/* Transiciones para redes sociales */
+.instagram{
+    transition: all 0.5s ease;
+}
+
+.instagram:hover{
+    transform: scale(1.3) translateX(-10px);
+}
+
+.facebook{
+    transition: all 0.5s ease;
+}
+
+.facebook:hover{
+    transform: scale(1.3);
+}
+
+.linkedin{
+    transition: all 0.5s ease;
+}
+
+.linkedin:hover{
+    transform: scale(1.3) translateX(10px);
+}
+/* Fin de transiciones para redes sociales*/
+
 /* Formulario de contacto */
 .form-container{
     background-color: lightgrey;
