--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
 
 .menu{
     margin-top: 50px;
+    margin-bottom: 50px;
     width: 90%;
     display: flex;
     justify-content: space-between;
@@ -59,6 +60,7 @@
 .title{
     background-color: lightgrey;
     padding-top: 20px;
+    margin: 0px;
 }
 
 h2{
@@ -74,14 +76,14 @@ h2{
 /* Formato de la presentación */
 #nosotros{
     background-color: lightgrey;
-    padding: 30px 30px 70px 30px;
+    padding: 30px 30px 20px 40px;
     display: flex;
 }
 
 .who-text{
     border: 3px solid white;
     padding: 30px;
-    margin-right: 30px;
+    margin-right: 20px;
     text-align: justify;
     color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
