--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,6 @@
 /* Importo los scss */
-@import 'components/contact-form';
+@import 'base/variables';
+@import 'components/menu';
+@import 'components/formatos';
+@import 'components/redes';
+@import 'components/obras';
