--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,112 @@
+@charset "UTF-8";
 /* Importo los scss */
+/* Variables */
+/* Menú principal */
+.menu-container {
+  display: flex;
+  justify-content: center;
+}
+
+.menu {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-item {
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 1em;
+}
+
+.menu-logo {
+  margin: 0px 5%;
+}
+
+/* Formato de los títulos */
+.title {
+  background-color: lightgrey;
+  padding-top: 20px;
+  margin: 0px;
+}
+
+h2 {
+  margin-top: 50px;
+  text-align: center;
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: normal;
+  font-size: 2em;
+}
+
+/* Fin del formato de los títulos */
+/* Formato de la presentación */
+#nosotros {
+  background-color: lightgrey;
+  padding: 30px 30px 20px 40px;
+  display: flex;
+}
+
+.who-text {
+  border: 3px solid white;
+  padding: 30px;
+  margin-right: 20px;
+  text-align: justify;
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: lighter;
+  font-size: 1.5em;
+}
+
+/* Fin de la presentación */
+/* Redes sociales */
+.social-container {
+  background-color: lightgrey;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.social-grid {
+  padding: 15px;
+  width: 250px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* Fin de las redes sociales */
+/* Transiciones para redes sociales */
+.instagram {
+  transition: all 0.5s ease;
+}
+
+.instagram:hover {
+  transform: scale(1.3) translateX(-10px);
+}
+
+.facebook {
+  transition: all 0.5s ease;
+}
+
+.facebook:hover {
+  transform: scale(1.3);
+}
+
+.linkedin {
+  transition: all 0.5s ease;
+}
+
+.linkedin:hover {
+  transform: scale(1.3) translateX(10px);
+}
+
+/* Fin de transiciones para redes sociales*/
+.shadow {
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
 
 /*# sourceMappingURL=style.css.map */
