--- a/scss/components/_formatos.scss
+++ b/scss/components/_formatos.scss
@@ -1,35 +1,43 @@
-/* Formato de los títulos */
-.title{
-    background-color: nth($color, 2);
-    padding-top: 20px;
-    margin: 0px;
+/* Formato global */
+
+body {
+	// min-height: 100vh;
+	// width: 100vw;
+	overflow-x: hidden;
 }
 
-h2{
-    margin-top: 50px;
-    text-align: center;
-    color: nth($color, 4);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: normal;
-    font-size: $titles;
+/* Formato de los títulos */
+.title {
+	background-color: nth($color, 2);
+	padding-top: 20px;
+	margin: 0px;
+}
+
+h2 {
+	margin-top: 50px;
+	text-align: center;
+	color: nth($color, 4);
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: normal;
+	font-size: $titles;
 }
 /* Fin del formato de los títulos */
 
 /* Formato de la presentación */
-#nosotros{
-    background-color: nth($color, 2);
-    padding: 30px 30px 20px 40px;
-    display: flex;
+#nosotros {
+	background-color: nth($color, 2);
+	padding: 30px 30px 20px 40px;
+	display: flex;
 }
 
-.who-text{
-    border: 3px solid nth($color, 1);
-    padding: 30px;
-    margin-right: 20px;
-    text-align: justify;
-    color: nth($color, 4);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: lighter;
-    font-size: 1.5em;
+.who-text {
+	border: 3px solid nth($color, 1);
+	padding: 30px;
+	margin-right: 20px;
+	text-align: justify;
+	color: nth($color, 4);
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: lighter;
+	font-size: 1.5em;
 }
 /* Fin de la presentación */
