Nuevos logos para clientes

--- a/css/style.css
+++ b/css/style.css
@@ -114,4 +114,8 @@ h2 {
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
+body {
+  background-color: green;
+}
+
 /*# sourceMappingURL=style.css.map */
