Nuevo carrousel en el index

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -1,25 +1,25 @@
-/* Menú principal */
-.menu-container{
-    display: flex;
-    justify-content: center;
-}
+// /* Menú principal */
+// .menu-container{
+//     display: flex;
+//     justify-content: center;
+// }
 
-.menu{
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+// .menu{
+//     margin-top: 50px;
+//     margin-bottom: 50px;
+//     width: 90%;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+// }
 
-.menu-item{
-    color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    font-size: 1em;
-}
+// .menu-item{
+//     color: black;
+//     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+//     font-weight: bold;
+//     font-size: 1em;
+// }
 
-.menu-logo{
-    margin: 0px 5%;
-}
+// .menu-logo{
+//     margin: 0px 5%;
+// }
