--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,16 @@
 @charset "UTF-8";
 /* Importo los scss */
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap");
 /* Variables */
-/* Menú principal */
-.menu-container {
-  display: flex;
-  justify-content: center;
-}
-
-.menu {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.menu-item {
-  color: black;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
-  font-size: 1em;
-}
-
-.menu-logo {
-  margin: 0px 5%;
-}
-
 /* Formato global */
 body {
+  background-color: #e6e6e4;
   overflow-x: hidden;
 }
 
 /* Formato de los títulos */
 .title {
-  background-color: lightgray;
+  background-color: #e6e6e4;
   padding-top: 20px;
   margin: 0px;
 }
@@ -43,19 +19,13 @@ h2 {
   margin-top: 50px;
   text-align: center;
   color: black;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: normal;
   font-size: 2em;
 }
 
 /* Fin del formato de los títulos */
 /* Formato de la presentación */
-#nosotros {
-  background-color: lightgray;
-  padding: 30px 30px 20px 40px;
-  display: flex;
-}
-
 .who-text {
   border: 3px solid white;
   padding: 30px;
@@ -112,10 +82,6 @@ h2 {
 /* Fin de transiciones para redes sociales*/
 .shadow {
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-}
-
-body {
-  background-color: green;
 }
 
 /*# sourceMappingURL=style.css.map */
