--- a/scss/components/_formatos.scss
+++ b/scss/components/_formatos.scss
@@ -3,6 +3,7 @@
 body {
 	// min-height: 100vh;
 	// width: 100vw;
+	background-color: #e6e6e4;
 	overflow-x: hidden;
 }
 
@@ -17,18 +18,18 @@ h2 {
 	margin-top: 50px;
 	text-align: center;
 	color: nth($color, 4);
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: normal;
 	font-size: $titles;
 }
 /* Fin del formato de los títulos */
 
 /* Formato de la presentación */
-#nosotros {
-	background-color: nth($color, 2);
-	padding: 30px 30px 20px 40px;
-	display: flex;
-}
+// #nosotros {
+// 	background-color: nth($color, 2);
+// 	padding: 30px 30px 20px 40px;
+// 	display: flex;
+// }
 
 .who-text {
 	border: 3px solid nth($color, 1);
