--- a/scss/components/_formatos.scss
+++ b/scss/components/_formatos.scss
@@ -10,12 +10,12 @@ body {
 /* Formato de los títulos */
 .title {
 	background-color: nth($color, 2);
-	padding-top: 20px;
 	margin: 0px;
 }
 
 h2 {
-	margin-top: 50px;
+	padding-top: 50px;
+	padding-bottom: 20px;
 	text-align: center;
 	color: nth($color, 4);
 	font-family: 'Lato', sans-serif;
@@ -24,17 +24,10 @@ h2 {
 }
 /* Fin del formato de los títulos */
 
-/* Formato de la presentación */
-// #nosotros {
-// 	background-color: nth($color, 2);
-// 	padding: 30px 30px 20px 40px;
-// 	display: flex;
-// }
-
 .who-text {
 	border: 3px solid nth($color, 1);
+	margin: 0px 0px 50px 0px;
 	padding: 30px;
-	margin-right: 20px;
 	text-align: justify;
 	color: nth($color, 4);
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
