--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,20 @@ body {
   overflow-x: hidden;
 }
 
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding-bottom: -0.5rem;
+  position: relative;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:hover {
+  border-top: 2px solid gray;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:active {
+  border-top: 3px solid gray;
+  color: black;
+}
+
 /* Formato de los títulos */
 .title {
   background-color: #e6e6e4;
@@ -21,7 +35,7 @@ h2 {
   color: black;
   font-family: "Lato", sans-serif;
   font-weight: normal;
-  font-size: 2em;
+  font-size: 2rem;
 }
 
 /* Fin del formato de los títulos */
@@ -33,7 +47,7 @@ h2 {
   color: black;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: lighter;
-  font-size: 1.5em;
+  font-size: 1rem;
 }
 
 /* Fin de la presentación */
