--- a/scss/components/_formatos.scss
+++ b/scss/components/_formatos.scss
@@ -7,6 +7,20 @@ body {
 	overflow-x: hidden;
 }
 
+.navbar-expand-lg .navbar-nav .nav-link{
+	padding-bottom: -0.5rem;
+	position: relative;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:hover{
+	border-top: 2px solid nth($color, 3);
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:active{
+	border-top: 3px solid nth($color, 3);
+	color: nth($color, 4);
+}
+
 /* Formato de los títulos */
 .title {
 	background-color: nth($color, 2);
@@ -32,6 +46,6 @@ h2 {
 	color: nth($color, 4);
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: lighter;
-	font-size: 1.5em;
+	font-size: 1rem;
 }
 /* Fin de la presentación */
