--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   overflow-x: hidden;
 }
 
+/* Formato del navbar */
 .navbar-expand-lg .navbar-nav .nav-link {
   padding-bottom: -0.5rem;
   position: relative;
@@ -34,7 +35,7 @@ h2 {
   text-align: center;
   color: black;
   font-family: "Lato", sans-serif;
-  font-weight: normal;
+  font-weight: bold;
   font-size: 2rem;
 }
 
@@ -51,6 +52,38 @@ h2 {
 }
 
 /* Fin de la presentación */
+/* Grilla de clientes */
+.clientes-container {
+  display: flex;
+  justify-content: center;
+}
+
+.grid-container {
+  display: grid;
+  width: 80%;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: minmax(200px, auto);
+  gap: 20px;
+  padding: 20px;
+  grid-auto-flow: dense;
+}
+
+.grid-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  transition: transform 0.3s ease-in-out;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.grid-item:hover {
+  filter: opacity(0.9);
+  transform: scale(1.04);
+}
+
 /* Redes sociales */
 .social-container {
   background-color: lightgrey;
