--- a/scss/components/_formatos.scss
+++ b/scss/components/_formatos.scss
@@ -5,6 +5,7 @@ body {
 	overflow-x: hidden;
 }
 
+/* Formato del navbar */
 .navbar-expand-lg .navbar-nav .nav-link{
 	padding-bottom: -0.5rem;
 	position: relative;
@@ -31,7 +32,7 @@ h2 {
 	text-align: center;
 	color: nth($color, 4);
 	font-family: 'Lato', sans-serif;
-	font-weight: normal;
+	font-weight: bold;
 	font-size: $titles;
 }
 /* Fin del formato de los títulos */
@@ -47,3 +48,36 @@ h2 {
 	font-size: 1rem;
 }
 /* Fin de la presentación */
+
+/* Grilla de clientes */
+.clientes-container{
+	display: flex;
+	justify-content: center;
+}
+
+.grid-container {
+  display: grid;
+  width: 80%;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: minmax(200px, auto);
+  gap: 20px;
+  padding: 20px;
+  grid-auto-flow: dense;
+}
+
+.grid-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  transition: transform 0.3s ease-in-out;
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.grid-item:hover {
+  filter: opacity(0.9);
+  transform: scale(1.04);
+}
