--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,32 @@
 /* Importo los scss */
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap");
 /* Variables */
+/* Grilla de clientes */
+.clientes-container {
+  display: flex;
+  justify-content: center;
+}
+
+.grid-container {
+  display: grid;
+  width: 80%;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: minmax(250px, auto);
+  gap: 30px;
+  grid-auto-flow: dense;
+}
+
+.grid-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.5s ease-out;
+}
+
+.grid-item:hover {
+  transform: scale(1.5);
+}
+
 /* Formato global */
 body {
   background-color: #e6e6e4;
@@ -35,7 +61,7 @@ h2 {
   text-align: center;
   color: black;
   font-family: "Lato", sans-serif;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 2rem;
 }
 
@@ -46,44 +72,12 @@ h2 {
   padding: 30px;
   text-align: justify;
   color: black;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: lighter;
-  font-size: 1rem;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-size: 1.2rem;
 }
 
 /* Fin de la presentación */
-/* Grilla de clientes */
-.clientes-container {
-  display: flex;
-  justify-content: center;
-}
-
-.grid-container {
-  display: grid;
-  width: 80%;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(200px, auto);
-  gap: 20px;
-  padding: 20px;
-  grid-auto-flow: dense;
-}
-
-.grid-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  transition: transform 0.3s ease-in-out;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.grid-item:hover {
-  filter: opacity(0.9);
-  transform: scale(1.04);
-}
-
 /* Redes sociales */
 .social-container {
   background-color: lightgrey;
@@ -94,9 +88,23 @@ h2 {
 
 .social-grid {
   padding: 15px;
-  width: 250px;
   display: flex;
+  align-items: center;
   justify-content: space-evenly;
+}
+
+.derechos {
+  margin: 0;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  background-color: black;
+  color: white;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-size: small;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Fin de las redes sociales */
@@ -106,7 +114,7 @@ h2 {
 }
 
 .instagram:hover {
-  transform: scale(1.3) translateX(-10px);
+  transform: scale(1.25) translateX(-10px);
 }
 
 .facebook {
@@ -114,7 +122,7 @@ h2 {
 }
 
 .facebook:hover {
-  transform: scale(1.3);
+  transform: scale(1.25);
 }
 
 .linkedin {
@@ -122,7 +130,7 @@ h2 {
 }
 
 .linkedin:hover {
-  transform: scale(1.3) translateX(10px);
+  transform: scale(1.25) translateX(10px);
 }
 
 /* Fin de transiciones para redes sociales*/
