--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -8,9 +8,23 @@
 
 .social-grid{
     padding: 15px;
-    width: 250px;
     display: flex;
+    align-items: center;
     justify-content: space-evenly;
+}
+
+.derechos{
+    margin: 0;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    background-color: nth($color, 4);
+    color: nth($color, 1);
+	font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: small;
+    align-items: center;
+    justify-content: center;
 }
 /* Fin de las redes sociales */
 
@@ -20,7 +34,7 @@
 }
 
 .instagram:hover{
-    transform: scale(1.3) translateX(-10px);
+    transform: scale(1.25) translateX(-10px);
 }
 
 .facebook{
@@ -28,7 +42,7 @@
 }
 
 .facebook:hover{
-    transform: scale(1.3);
+    transform: scale(1.25);
 }
 
 .linkedin{
@@ -36,6 +50,6 @@
 }
 
 .linkedin:hover{
-    transform: scale(1.3) translateX(10px);
+    transform: scale(1.25) translateX(10px);
 }
 /* Fin de transiciones para redes sociales*/
