--- a/scss/components/_formatos.scss
+++ b/scss/components/_formatos.scss
@@ -32,8 +32,8 @@ h2 {
 	text-align: center;
 	color: nth($color, 4);
 	font-family: 'Lato', sans-serif;
-	font-weight: bold;
-	font-size: $titles;
+	font-weight: 500;
+	font-size: 2rem;
 }
 /* Fin del formato de los títulos */
 
@@ -43,41 +43,10 @@ h2 {
 	padding: 30px;
 	text-align: justify;
 	color: nth($color, 4);
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-	font-weight: lighter;
-	font-size: 1rem;
+	font-family: "Lato", sans-serif;
+	font-weight: 300;
+	font-size: 1.2rem;
 }
 /* Fin de la presentación */
 
-/* Grilla de clientes */
-.clientes-container{
-	display: flex;
-	justify-content: center;
-}
 
-.grid-container {
-  display: grid;
-  width: 80%;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(200px, auto);
-  gap: 20px;
-  padding: 20px;
-  grid-auto-flow: dense;
-}
-
-.grid-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  transition: transform 0.3s ease-in-out;
-
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.grid-item:hover {
-  filter: opacity(0.9);
-  transform: scale(1.04);
-}
