--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 /* Importo los scss */
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap");
 @import "base/variables";
-@import "components/menu";
+@import "components/clientes";
 @import "components/formatos";
-@import "components/redes";
+@import "components/footer";
 @import "components/obras";
